<resources>
    <string name="app_name">Rota das Águas</string>

    <!--FACEBOOK-->
    <string name="facebook_app_id">552928034899787</string>

    <!--String - Title Activity -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Cadastro</string>
    <string name="title_activity_home">Rota das Águas</string>
    <string name="title_activity_minha_rota">Minha Rota</string>
    <string name="title_activity_nova_rota">Nova Rota</string>
    <string name="title_activity_cidades">Cidades do Circuito</string>
    <string name="title_activity_emergencia">Emergência</string>
    <string name="title_activity_minha_conta">Minha Conta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_new">Senha Atual</string>
    <string name="prompt_celular">Celular com DDD</string>
    <string name="prompt_new_password">Nova senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_facebook">Entrar com Facebook</string>
    <string name="action_sign_in_google">Entrar com Google</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="action_sign_up_call">Cadastrar</string>
    <string name="action_reset_call">Esqueci minha Senha</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Cadastro</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="update_profile">Atualizar profile</string>
    <string name="reset">Recuperar acesso</string>
    <string name="update_login">Atualizar login</string>
    <string name="reset_bt_label">Iniciar recuperação acesso</string>
    <string name="update_password">Atualizar senha</string>
    <string name="remove_user">Remover conta</string>
    <string name="logout">Logout</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_update_login">UpdateLoginActivity</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="title_activity_remove_user">RemoveUserActivity</string>
    <string name="password_info">Para prosseguir com a atualização informe abaixo sua senha.</string>

    <string name="title_activity_montar_rota">MontarRotaActivity</string>
    <string name="title_activity_alimentacao_sub">AlimentacaoSubActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_local">Local</string>


    <!-- icones textos -->
    <string name="icon_person">{fa-user}</string>


    <!-- textos das cidades -->
    <string name="texto_socorro">Com uma incrível vocação para o turismo de aventura, Socorro se destaca pela preocupação pioneira com acessibilidade. Hotéis, parques e ruas foram pensados para todos se divertirem, incluindo pessoas com mobilidade reduzida. Para quem nunca se lançou no rafting, aqui é o lugar ideal para debutar no esporte: há corredeiras suaves para iniciantes.</string>
    <string name="texto_amparo">É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</string>
    <string name="texto_jaguariuna">É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</string>
    <string name="texto_mas">É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</string>
    <string name="texto_pedreira">É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</string>
    <string name="texto_a_lindoia">É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</string>
    <string name="texto_lindoia">É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</string>
    <string name="texto_holambra">É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</string>
    <string name="texto_serra_negra">É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</string>


    <string name="access_token">pk.eyJ1Ijoic2lxdWVpcmFkZyIsImEiOiJjaXdjMmQ1MHgwN2hsMnRxdXJ6ZW02aDR5In0.aKGgPEAlZugAygzpQQ_sww</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
