<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="to.dtech.rotadasaguas.UpdateLoginActivity"
    tools:showIn="@layout/activity_update_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/icone_usuario_senha"
            android:layout_gravity="center_horizontal"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="25dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_person"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_below="@id/icone_usuario_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/v_line"
            android:layout_below="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#999"/>

        <TextView
            android:padding="5dp"
            android:background="#ffc"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:id="@+id/tv_info"
            android:layout_below="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_info"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_below="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/sign_up"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_logout"
            style="@style/btnStyleBlue"
            android:layout_marginTop="40dp"
            android:layout_below="@id/til_password"
            android:onClick="update"
            android:gravity="center"
            android:text="@string/update_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</ScrollView>
