<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_below="@+id/logo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_gravity="center_horizontal"
            android:layout_width="72dp"
            android:layout_height="92dp"
            android:src="@mipmap/ic_logo_white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Rota das Águas"
            android:id="@+id/logoTexto"
            android:layout_below="@+id/logo"
            android:textAllCaps="true"
            android:textColor="#f1f1f1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:textStyle="bold"
            android:focusable="false" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:background="#037dbf"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColor="#fff"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:background="#037dbf"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:textColor="#fff"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="false" />

        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/btnStyleBlue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:padding="12dp"
            android:onClick="sendLoginData"
            android:id="@+id/email_sign_in_button"
            android:text="Entrar"/>

        <Button
            android:onClick="sendLoginFacebookData"
            android:id="@+id/email_sign_in_facebook_button"
            style="@style/btnStyleBlueDark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:text="Entrar com o Facebook"/>

        <TextView
            android:onClick="callSignUp"
            android:id="@+id/cadastrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Ainda não tem Conta? Criar Conta"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="16dip"/>

        <TextView android:id="@+id/reset_password"
            android:layout_width="fill_parent"
            android:onClick="callReset"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Esqueceu a senha? Troque Agora"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</RelativeLayout>

